[Harshit] Refactored: Refactored notes functions
